# src/routes/categories.routes.ts
@@ -1,16 +1,21 @@
 import { Router } from 'express';
 import multer from 'multer';
 
-import createCategoryController from '../modules/cars/useCases/createCategory/index';
-import importCategoryController from '../modules/cars/useCases/importCategory';
-import listCategoriesController from '../modules/cars/useCases/listCategories';
+import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController';
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController';
+import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController';
 
 const categoriesRoutes = Router();
 const upload = multer({
   dest: './tmp',
 });
-categoriesRoutes.post('/', (req, res) => createCategoryController().handle(req, res));
-categoriesRoutes.get('/', (req, res) => listCategoriesController().handle(req, res));
-categoriesRoutes.post('/import', upload.single('file'), (req, res) => importCategoryController().handle(req, res));
+
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
+
+categoriesRoutes.post('/', createCategoryController.handle);
+categoriesRoutes.get('/', listCategoriesController.handle);
+categoriesRoutes.post('/import', upload.single('file'), importCategoryController.handle);
 
 export { categoriesRoutes };
