# src/routes/index.ts
@@ -1,11 +1,15 @@
 import { Router } from 'express';
 
+import { authenticateRoutes } from './authenticate.routes';
 import { categoriesRoutes } from './categories.routes';
-import { specificationRoutes } from './specifications.routes';
+import { specificationsRoutes } from './specifications.routes';
+import { usersRoutes } from './users.routes';
 
 const routes = Router();
 
 routes.use('/categories', categoriesRoutes);
-routes.use('/specifications', specificationRoutes);
+routes.use('/specifications', specificationsRoutes);
+routes.use('/users', usersRoutes);
+routes.use(authenticateRoutes);
 
 export { routes };
